--- a/bootstrap-3.3.7-dist/css/style.css
+++ b/bootstrap-3.3.7-dist/css/style.css
@@ -2,10 +2,13 @@
 background-color: #001a3a;
 }
 #header{
-padding-top: 10px;
+padding-top: 12px;
 height: 60px;
 }
 #footer{
 height: 50px;
 color: #4565ad;
+}
+.content{
+  margin-top: 60px;
 }
