routing (felher im pfad)

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="login-container">
   <input type="email" class="field"/>
   <input type="password" class="field"/>
-  <button type="submit" class="check-night-button">LOS!</button>
+  <a routerLink='AppComponent' type="submit" class="check-night-button" >LOS!</a>
   <p class="check-register">Sie möchten mit CHECK! arbeiten?<br/>
     <a class="check-register" href="google.de">Jetzt registrieren</a>
   </p>
