--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div>
   <div class="fields-middle">
     <img class="icon center-logo" src="images\change-password.png"/>
