--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--
-<app-header class="header"></app-header>
+<app-header></app-header>
 <app-window class="window-container"></app-window>
-<app-footer class="footer"></app-footer>
+<app-footer></app-footer>
 -->
-<app-header class="header"></app-header>
+
 <app-change-avatar></app-change-avatar>
