--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-window class="window-container"></app-window>
 <app-footer></app-footer>
 -->
-
-<app-change-avatar></app-change-avatar>
+<div>
+<router-outlet></router-outlet>
+</div>
