--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -102,9 +102,9 @@
             DATUM
           </section>
       </section>
-      <a href="#">MEIN PROFILBILD ÄNDERN</a>
-      <a href="#">MEIN PASSWORT ÄNDERN</a>
-      <a href="#">MEIN PROFIL LÖSCHEN</a>
+      <a routerLink="/change-avatar">MEIN PROFILBILD ÄNDERN</a>
+      <a routerLink="/change-password">MEIN PASSWORT ÄNDERN</a>
+      <a routerLink="/delete-profile">MEIN PROFIL LÖSCHEN</a>
     </div>
   </div>
   <!--- Schulinfo --->
@@ -146,10 +146,10 @@
             BRAUCHST<br>DU HILFE?
           </p>
       </section>
-      <a href="#">SO GEHT´S!</a>
-      <a href="#">VIDEO-TUTORIALS</a>
-      <a href="#">HÄUFIG GESTELLTE FRAGEN</a>
-      <a href="#">KONTAKT</a>
+      <a href="http://www.check-lehrerzimmer.com/hilfe/erste-schritte/" target="_blank">SO GEHT´S!</a>
+      <a href="http://www.check-lehrerzimmer.com/tutorial/" target="_blank">VIDEO-TUTORIALS</a>
+      <a href="http://www.check-lehrerzimmer.com/faq/" target="_blank">HÄUFIG GESTELLTE FRAGEN</a>
+      <a href="http://www.check-lehrerzimmer.com/contact/" target="_blank">KONTAKT</a>
     </div>
     </div>
     <!--- Logout --->
