--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,4 +1,7 @@
-
+<app-header></app-header>
+<div class="window-container">  
   <app-left-illustration class="left"></app-left-illustration>
   <app-middle-text class="middle"></app-middle-text>
   <app-right-illustration class="right"></app-right-illustration>
+</div>
+<app-footer></app-footer>
