--- a/src/app/change-avatar/change-avatar.component.css
+++ b/src/app/change-avatar/change-avatar.component.css
@@ -1,20 +1,26 @@
 .buttons{
-display: flex;
+display: block;
 }
 .button{
   height: 40px;
   width: 150px;
-  display: block;
+  display: flex;
   border-radius: 5px;
   margin: 2px;
+
 }
 .cancel{
   border: 2px solid #8da6d6;
   background-color: #8da6d6;
   color: #4565ad;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 .save{
   border: 2px solid #001a3a;
   background-color: #001a3a;
   color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
