--- a/src/app/change-avatar/change-avatar.component.html
+++ b/src/app/change-avatar/change-avatar.component.html
@@ -3,18 +3,10 @@
   <div class="fields-middle">
     <img class="icon center-logo" src="images\student\superhero-batman-big-active.png"/>
     <p class="text-middle-check-night">PROFILBILD ÄNDERN</p>
+</div>
 
-    <div class="buttons">
-      <button type="submit" class="button cancel">ABBRECHEN</button><button type="submit" class="button save">SPEICHERN</button>
+    <div class="buttons"  >
+      <button type="submit" class="button cancel">ABBRECHEN</button>
+      <button type="submit" class="button save">SPEICHERN</button>
     </div>
-
-    <div align="center">
-      
-    </div>
-
-    <div class="buttons">
-      <button type="submit" class="button cancel">ABBRECHEN</button><button type="submit" class="button save">SPEICHERN</button>
-    </div>
-
-  </div>
 </div>
