Login view fixed, Change Avatar Routerlink zu Mainpage bei Abbruch

--- a/src/app/change-avatar/change-avatar.component.html
+++ b/src/app/change-avatar/change-avatar.component.html
@@ -6,7 +6,7 @@
 </div>
 
     <div class="buttons"  >
-      <button type="submit" class="button cancel">ABBRECHEN</button>
+      <button routerLink='/index' class="button cancel">ABBRECHEN</button>
       <button type="submit" class="button save">SPEICHERN</button>
     </div>
 </div>
