--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <img class="header-picture" src="images\login\header.png" />
 <div class="login-container">
-  <input type="email" class="field"/>
-  <input type="password" class="field"/>
-  <a routerLink='index' type="submit" class="check-night-button" >LOS!</a>
+  <input type="email" placeholder="BENUTZERNAME" class="field"/>
+  <input type="password" placeholder="PASSWORT" class="field2"/>
+  <a routerLink='/index' type="submit" class="check-night-button" >LOS!</a>
   <p class="check-register">Sie möchten mit CHECK! arbeiten?<br/>
     <a class="check-register" href="google.de">Jetzt registrieren</a>
   </p>
