avatar change fix, pw change fix, delete profile fix, login fix

--- a/src/app/change-avatar/change-avatar.component.html
+++ b/src/app/change-avatar/change-avatar.component.html
@@ -5,8 +5,26 @@
     <p class="text-middle-check-night">PROFILBILD ÄNDERN</p>
 </div>
 
-    <div class="buttons"  >
-      <button routerLink='/index' class="button cancel">ABBRECHEN</button>
-      <button type="submit" class="button save">SPEICHERN</button>
+    <div align="center" class="buttons"  >
+      <table border = "0">
+        <tr>
+    <th>  <button routerLink='/index' class="button cancel">ABBRECHEN</button>
+    </th>
+
+    <th>  <button type="submit" class="button save">SPEICHERN</button>
+</th>
+</tr>
+</table>
+    </div>
+    <div align="center" class="buttons"  >
+      <table border = "0">
+        <tr>
+    <th>  <button routerLink='/index' class="button cancel">ABBRECHEN</button>
+    </th>
+
+    <th>  <button type="submit" class="button save">SPEICHERN</button>
+</th>
+</tr>
+</table>
     </div>
 </div>
