--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,11 +1,28 @@
 <app-header></app-header>
-<div>
+
   <div class="fields-middle">
-    <img class="icon center-logo" src="images\change-password.png"/>
-    <p class="text-middle-check-night">PASSWORT ÄNDERN</p>
-    <input type="password" class="field"/>
-    <input type="password" class="field"/>
-    <input type="password" class="field"/>
-    <button type="submit" class="check-night-button">ÄNDERN</button>
+
+<img class="icon center-logo" src="images\change-password.png"/>
+<p class="text-middle-check-night">PASSWORT ÄNDERN</p>
+</div>
+<div>
+  <table border="0" width="100%">
+    <tr>
+      <td ALIGN="RIGHT" width="500" class="fontPassword">Altes Passwort eingeben </td>
+<td ALIGN="CENTER" width="300">  <input type="password" name="AktuellesPW" class="field"/> </td>
+<td  width="500" rowspan="3"> platzhalter für bubble </td>
+</tr>
+<tr>
+  <td ALIGN="RIGHT" width="500" class="fontPassword">Altes Passwort eingeben </td>
+<td ALIGN="CENTER" width="300">  <input type="password" name="neuesPW" class="field"/> </td>
+</tr>
+<tr >
+  <td ALIGN="RIGHT" width="500" class="fontPassword" >Altes Passwort eingeben </td>
+<td ALIGN="CENTER" width="300">  <input type="password" name="neuesPW2" class="field"/> </td>
+</tr>
+
+</table>
+  <div class="fields-middle2">
+  <a routerLink='/index' type="submit" class="check-night-button2" >Ändern</a>
   </div>
 </div>
