--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -64,9 +64,10 @@
 
 
 
+
 .check-night-button{
   text-align: center;
-  height: 40px;
+  height: 30px;
   width: 150px;
   margin-left: auto;
   margin-right: auto;
@@ -77,7 +78,11 @@
   border-radius: 5px;
   background-color: #001a3a;
   color: white;
+  cursor: pointer;
+  padding-top: 10px;
 }
+
+
 .center-logo{
   display: block;
   margin-left: auto;
