--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,17 +7,18 @@
 <body class="flex-container">
   <section class="left">
     <!-- Kapitelübersicht --->
-    <div class="dropdown flex-button" id="chapters">
+    <div class="dropdown flex-button" id="chapters" >
+      <section  class="upper-arrow-white Zäbblinvisible"></section>
+      <section  class="upper-arrow-blue Zäbblinvisible"></section>
       <div class="dropdown-content" id="dropdown-chapters">
-        <section class="dropdown-first">
-
+        <section class="dropdown-first" >
             <img src="/images/confirmation.png" class="dropdown-first-icon"/>
-            <div class="dropdown-first-headline">
+            <div class="dropdown-first-headline" >
               <p>CHECK!<br>Kompetenzliste</p>
             </div>
 
         </section>
-        <section class="dropdown-scroll" id="leftbox">
+        <section class="dropdown-scroll" id="leftbox" >
           <a href="#" class="ch00 ch01">DAS BIN ICH!</a>
           <a href="#" class="ch00 ch02">ICH UND DIE ANDEREN</a>
           <a href="#" class="ch00 ch03">DIE WELT UM MICH HERUM</a>
@@ -39,9 +40,10 @@
     </div>
     <!-- Förderplan --->
     <div class="dropdown flex-button" id="educational-plan">
+      <section  class="upper-arrow-white"></section>
+      <section  class="upper-arrow-blue"></section>
       <div class="dropdown-content" id="dropdown-educational-plan">
         <section class="dropdown-first">
-
             <img src="/images/educationalPlan-big.png" class="dropdown-first-icon" />
             <p class="dropdown-first-headline">
               FÖRDERPLAN<br>PLATZHALTER
@@ -55,9 +57,10 @@
     </div>
     <!-- das kann ich --->
     <div class="dropdown flex-button" id="achieved-competences">
+      <section  class="upper-arrow-white"></section>
+      <section  class="upper-arrow-blue"></section>
       <div class="dropdown-content" id="dropdown-achieved-competences">
         <section class="dropdown-first">
-
             <img src="/images/achievedCompetences-big.png" class="dropdown-first-icon" />
             <p class="dropdown-first-headline">
               DAS<br>KANN<br>ICH
@@ -92,6 +95,8 @@
   <section class="right">
     <!--- Profilmenue --->
   <div class="dropdown flex-button" id="profile">
+    <section  class="upper-arrow-white"></section>
+    <section  class="upper-arrow-blue"></section>
     <div class="dropdown-content" id="dropdown-profile">
       <section class="dropdown-first">
           <img src="/images/student/superhero-robin-big-active.png" class="dropdown-first-icon" />
@@ -109,6 +114,8 @@
   </div>
   <!--- Schulinfo --->
   <div class="dropdown flex-button" id="school">
+    <section  class="upper-arrow-white"></section>
+    <section  class="upper-arrow-blue"></section>
     <div class="dropdown-content" id="dropdown-school">
       <section class="dropdown-first">
           <img src="/images/school/school-rose-big-active.png" class="dropdown-first-icon" />
@@ -123,13 +130,15 @@
   </div>
   <!--- Klasseninfo --->
   <div class="dropdown flex-button" id="grade">
+    <section  class="upper-arrow-white"></section>
+    <section  class="upper-arrow-blue"></section>
     <div class="dropdown-content" id="dropdown-grade">
       <section class="dropdown-first">
           <img src="/images/studyGroup/studyGroup_2a_active-big.png" class="dropdown-first-icon" />
           <p class="dropdown-first-headline">
             KLASSE<br>2B<br>&nbsp;
           </p>
-          <section class="dropdown-first-smalltext">
+          <section class="dropdown-first-smalltext" >
           KLASSENLEHRER<br>VORNAME NAME
         </section>
       </section>
@@ -139,6 +148,8 @@
     <div class="split"></div>
     <!--- Hilfe --->
     <div class="dropdown flex-button" id="help">
+      <section  class="upper-arrow-white" ></section>
+      <section  class="upper-arrow-blue"></section>
     <div class="dropdown-content" id="dropdown-help">
       <section class="dropdown-first">
           <img src="/images/help-big.png" class="dropdown-first-icon" />
@@ -154,6 +165,8 @@
     </div>
     <!--- Logout --->
     <div class="dropdown flex-button" id="logout">
+      <section  class="upper-arrow-white" id="visible"></section>
+      <section  class="upper-arrow-blue" id="visible"></section>
     <div class="dropdown-content" id="dropdown-logout">
       <section class="dropdown-first">
           <img src="/images/logout-big.png" class="dropdown-first-icon" />
