Check verlassen? NEIN! --> Page Refreh

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -175,7 +175,7 @@
           </p>
       </section>
       <a href="#">JA</a>
-      <a href="#">NEIN</a>
+      <a href="javascript:history.go(0)">NEIN</a>
     </div>
     </div>
 
