--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -8,21 +8,23 @@
 <div>
   <table border="0" width="100%">
     <tr>
-      <td ALIGN="RIGHT" width="500" class="fontPassword">Altes Passwort eingeben </td>
-<td ALIGN="CENTER" width="300">  <input type="password" name="AktuellesPW" class="field"/> </td>
-<td  width="500" rowspan="3"> platzhalter für bubble </td>
-</tr>
-<tr>
-  <td ALIGN="RIGHT" width="500" class="fontPassword">Altes Passwort eingeben </td>
-<td ALIGN="CENTER" width="300">  <input type="password" name="neuesPW" class="field"/> </td>
-</tr>
-<tr >
-  <td ALIGN="RIGHT" width="500" class="fontPassword" >Altes Passwort eingeben </td>
-<td ALIGN="CENTER" width="300">  <input type="password" name="neuesPW2" class="field"/> </td>
-</tr>
-
-</table>
-  <div class="fields-middle2">
-  <a routerLink='/index' type="submit" class="check-night-button2" >Ändern</a>
-  </div>
+      <td align="right" width="500" class="fontPassword">AKTUELLES PASSWORT</td>
+      <td align="center" width="300">  <input id='oldPW' type="password" name="oldPW" class="field"/> </td>
+      <td  width="500" rowspan="3"> platzhalter für bubble </td>
+    </tr>
+    <tr>
+      <td align="right" width="500" class="fontPassword">NEUES PASSWORT</td>
+      <td align="center" width="300">  <input id='newPW1' [(ngModel)]="password"
+        class="field" #pwField="ngModel" name="ngModel" type="password"
+        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}"/>
+      </td>
+    </tr>
+    <tr >
+      <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG</td>
+      <td align="center" width="300">  <input id='newPW2' type="password" name="newPW1" class="field"/> </td>
+    </tr>
+  </table>
+    <div class="fields-middle2">
+      <button type="submit" class="check-night-button2" (click)="checkPassword()">ÄNDERN</button>
+    </div>
 </div>
