--- a/src/app/delete-profile/delete-profile.component.html
+++ b/src/app/delete-profile/delete-profile.component.html
@@ -1,24 +1,20 @@
 <app-header></app-header>
 <div>
-
-
   <div class="fields-middle">
 
-    <img class="icon center-logo" src="images\delete-profile.png"/>
-    <p class="text-middle-check-night">PROFIL LÖSCHEN</p>
-</div>
-<div>
-  <table border="0" width="100%">
-    <tr>
-      <td ALIGN="RIGHT" width="500" class="fontPassword">Aktuelles Passwort eingeben </td>
-<td ALIGN="CENTER" width="300">  <input type="password" name="AktuellesPW" class="field"/> </td>
-<td  width="500" rowspan="3"> Platzhalter für bubble </td>
-</tr>
-</table>
-  <div class="fields-middle2">
-  <a routerLink='/index' type="submit" class="check-night-button2" >Profil Löschen</a>
+      <img class="icon center-logo" src="images\delete-profile.png"/>
+      <p class="text-middle-check-night">PROFIL LÖSCHEN</p>
   </div>
-</div>
-
-
+  <div>
+    <table border="0" width="100%">
+      <tr>
+        <td align="right" width="500" class="fontPassword">PASSWORT</td>
+        <td align="center" width="300">  <input type="password" id="passwordField" class="field"/></td>
+        <td  width="500" rowspan="3"> Platzhalter für bubble </td>
+      </tr>
+    </table>
+    <div class="fields-middle2">
+      <button type="submit" class="check-night-button2" (click)="deleteAccount()">LÖSCHEN</button>
+    </div>
+  </div>
 </div>
