--- a/src/app/change-avatar/change-avatar.component.css
+++ b/src/app/change-avatar/change-avatar.component.css
@@ -7,7 +7,9 @@ display: block;
   display: flex;
   border-radius: 5px;
   margin: 2px;
-
+}
+#pictureContainer{
+  width: 800px;
 }
 .cancel{
   border: 2px solid #8da6d6;
