--- a/src/app/change-avatar/change-avatar.component.html
+++ b/src/app/change-avatar/change-avatar.component.html
@@ -1,30 +1,39 @@
 <app-header></app-header>
 <div>
-  <div class="fields-middle">
-    <img class="icon center-logo" src="images\student\superhero-batman-big-active.png"/>
-    <p class="text-middle-check-night">PROFILBILD ÄNDERN</p>
+  <div class="fields-middle" *ngIf="picTopOld">
+    <img class="icon center-logo" [src]="'../../..'+avatarPictures[currentPicture]?.avatarBigUrl" />
+  </div>
+
+  <div class="fields-middle" *ngIf="picTopNew">
+    <img class="icon center-logo" [src]="'../../..'+pictureCurrentUrl" />
+  </div>
+  <p class="text-middle-check-night">PROFILBILD ÄNDERN</p>
+
+
+<div align="center" class="buttons"  >
+  <table border = "0">
+  <tr>
+    <th><button routerLink='/index' class="button cancel">ABBRECHEN</button>
+    </th>
+    <th><button type="submit" class="button save" (click)="changePicture()">SPEICHERN</button>
+    </th>
+  </tr>
+  </table>
 </div>
-
-    <div align="center" class="buttons"  >
-      <table border = "0">
-        <tr>
-    <th>  <button routerLink='/index' class="button cancel">ABBRECHEN</button>
+<div align="center">
+  <div id="pictureContainer">
+    <img *ngFor="let avatar of avatarPictures, let i = index" [src]="'../../../'+avatar.avatarBigUrl" height="70px" width="70px"
+         class="pictureRowMargin" (click)="changePictureCurrent('../../..'+avatar.avatarBigUrl, i)"/>
+  </div>
+</div>
+<div align="center" class="buttons"  >
+  <table border = "0">
+  <tr>
+    <th><button routerLink='/index' class="button cancel">ABBRECHEN</button>
     </th>
-
-    <th>  <button type="submit" class="button save">SPEICHERN</button>
-</th>
-</tr>
-</table>
-    </div>
-    <div align="center" class="buttons"  >
-      <table border = "0">
-        <tr>
-    <th>  <button routerLink='/index' class="button cancel">ABBRECHEN</button>
+    <th><button type="submit" class="button save" (click)="changePicture()">SPEICHERN</button>
     </th>
-
-    <th>  <button type="submit" class="button save">SPEICHERN</button>
-</th>
-</tr>
-</table>
-    </div>
+  </tr>
+  </table>
+</div>
 </div>
