--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -1,25 +1,213 @@
-body{
+#content {
   display: -webkit-flex;
-  flex-flow:column;
-  margin: 0px;
+  flex-flow: row;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 5px;
 }
-.left{
+
+#pictureInBubble {
+  position: absolute;
+  margin-top: 10px;
+  margin-left: -15px;
+}
+
+.bubble {
+  width: 369px;
+  height: 120px;
+  background: url(../../../images/contentTextBubble.png) no-repeat top left;
+  background-size: contain;
+  margin: 5px;
+}
+
+.bubble-text {
+  margin-top: 10px;
+  max-width: 250px;
+  height: 105px;
+  text-align: left;
+  word-wrap: break-word;
+}
+
+.bubble-img {
+  padding: 15px;
+  margin-right: 15px;
+}
+
+#scrollButtonTop {
+  position: fixed;
+  z-index: 1;
+  left: calc(100% - 60px);
+  top: 80px;
+  background: url(../../../images/chapter15/scrollUp.png) no-repeat;
+  color: transparent;
+  border-color: transparent;
+  height: 45px;
+  width: 45px;
+}
+
+#scrollButtonBottom {
+  position: fixed;
+  z-index: 1;
+  left: calc(100% - 60px);
+  bottom: 70px;
+  background: url(../../../images/chapter15/scrollDown.png) no-repeat;
+  color: transparent;
+  border-color: transparent;
+  height: 45px;
+  width: 45px;
+}
+
+@media screen and (max-width: 1130px) {
+  .illustrationResponsive {
+    display: none;
+  }
+
+  .left-arrow{
+
+    left: 20px;
+  }
+
+  .flagResponsiveScreen {
+    display: none;
+  }
+
+  .left-arrow-white {
+    display: none !important;
+  }
+
+  .left-arrow-blue {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .flagResponsiveHandy {
+    position: absolute;
+    top: -45px;
+    left: -5px;
+
+  }
+
+  .responsiveBubbles {
+    position: absolute;
+    margin-top: 110px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  #scrollButtonTop {
+    display: none;
+  }
+
+  #scrollButtonBottom {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1130px) {
+  .flagResponsiveHandy {
+    display: none;
+  }
+}
+
+#illustrationRight {
+  display: -webkit-flex;
+  flex-flow: column;
+  margin-top: 104px;
+  margin-left: 0px;
+  margin-right: auto;
+}
+
+#illustrationLeft {
+  display: -webkit-flex;
+  flex-flow: column;
   margin-top: 60px;
-  margin-bottom: 50px;
-  flex-grow: 1;
-  flex-shrink: 1;
+  margin-left: auto;
+  margin-right: 0px;
 }
-.middle{
-  margin-top: 60px;
-  margin-bottom: 50px;
+
+#studentText {
+  font-family: dr-hh-el;
+  font-size: 18pt;
+  color: #001a3a;
 }
-.right{
-  margin-top: 60px;
-  margin-bottom: 50px;
-  flex-grow: 1;
-  flex-shrink: 1;
+
+#numberFont {
+  font-family: letteromatic;
+  font-size: 7.5pt;
+  text-align: left;
+  color: #d3ddf2;
+  padding-top: 100px;
+  padding-left: 5px;
+  position: absolute;
 }
-.window-container{
-  display: flex;
-  background-color: green;
+
+.left-arrow {
+  display: inline-block;
+  position: absolute;
+  font-family: roboto-thin;
+  font-size: 13pt;
+  color: #fff;
+  background-color: #001a3a;;
+  border-radius: 7px;
+  width: 250px;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-left: 40px;
+  z-index: 10;
+  padding: 2px;
+}
+
+.left-arrow-blue {
+  display: inline-block;
+  position: absolute;
+  color: transparent;
+  background-color: transparent;;
+  width: 250px;
+  border: 2px transparent;
+  margin-left: 40px;
+  z-index: 10;
+  padding: 2px;
+}
+
+.left-arrow-blue:after {
+  content: '';
+  display: block;
+  z-index: 2;
+  position: absolute;
+  right: 246px;
+  top: 19px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-right: 10px solid #001a3a;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid transparent;
+}
+
+.left-arrow-white {
+  display: inline-block;
+  position: absolute;
+  color: transparent;
+  background-color: transparent;;
+  width: 250px;
+  border: 2px transparent;
+  margin-left: 40px;
+  z-index: 9;
+  padding: 2px;
+}
+
+.left-arrow-white:after {
+  content: '';
+  display: block;
+  z-index: -1;
+  position: absolute;
+  right: 249px;
+  top: 19px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-right: 10px solid white;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid transparent;
 }
