mid content postion fix

--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -12,7 +12,7 @@
   <div class="responsiveBubbles" align="center">
     <img [src]="bodyDynamics.chapterFlag" class="flagResponsiveHandy">
     <div class="bubble" *ngFor="let cont of bodyDynamics.chapterBubbles; let i=index">
-      <section class="bubble-text col-xs-12">
+      <section class="bubble-text">
         <p id="studentText">
           {{cont.studentText}}
         </p>
